tests/data-clumps/test-cases/parameter-field/simple/positive/java/source/Patient.java
public class Patient {
    public int recordId;
    public boolean isActive;
    public int visitCount;

    public Patient(int recordId, boolean isActive, int visitCount) {
        this.recordId = recordId;
        this.isActive = isActive;
        this.visitCount = visitCount;
    }
}
